# GeneticComparisonTool

./: .gitignore  Cargo.toml  GCF Format Spec.md  sampleGenome.txt
src/: charts.rs  gcto_file.rs  main.rs
src/analyzers/: complement.rs  targeting.rs
src/vis/: web-comp.html  web.rs
